safari gap fix

--- a/assets/sass/style.sass
+++ b/assets/sass/style.sass
@@ -285,7 +285,6 @@ body
     display: flex
     align-items: center
     justify-content: center
-    gap: .6rem
 
     .swiper-pagination-bullet-active
       background: var(--primary)
@@ -319,7 +318,7 @@ body
 .thumb-slider__control-container
   display: flex;
   align-items: center;
-  margin-right: 2rem;
+  gap: 2rem;
 
 .swiper-pagination-bullet 
   background: var(--white);
